# Pythonic

./: .gitignore  CMakeLists.txt  OPTIMIZATION_PLAN.md  README.md  README.md.backup  calculator_main  car_sim  cc  demo  demo_context.txt  demo_lines.txt  demo_output.txt  demo_runner  extracted_functions.md  flappy_bird  fps_game  graph_viewer_example  imgui.ini  issues i need to fix.md  need.md  pythonic.hpp  pythonicConfig.cmake  pythonicFunction.hpp  pythonicMath.hpp  pythonicPrint.hpp  pythonicVars.hpp  test  test.cpp  test_braille_pattern.cpp  test_bw_parse  test_bw_raw.txt  test_comprehensive  test_concepts  test_cpp  test_errors  test_export_debug.cpp  test_fastpath  test_flood_dot  test_graph_sanity  test_grayscale_dot.cpp  (+21 more)
Lumora_gui/Lumora_gui/: ARCHITECTURE.md  README.md  main.cpp
Lumora_gui/Lumora_gui/core/: LumoraAPI.hpp  Types.hpp
Lumora_gui/Lumora_gui/panels/: MainWindow.hpp
Lumora_gui/Lumora_gui/src/: LumoraGUI.cpp  MockProvider.cpp  main.cpp
Lumora_gui/Lumora_gui/theme/: NeonPalette.hpp
Lumora_gui/Lumora_gui/widgets/: CortexInspector.hpp  HyperparameterValve.hpp  Observer.hpp  PulseDashboard.hpp  XRayGraph.hpp
benchmark/: CMakeLists.txt  after_doing_refractor  after_type_promotion.md  benchmark  benchmark.cpp  benchmark.py  benchmark_after_optimized.md  benchmark_report.md  my_benchmark.md  python_results.json  wow, exhousted
benchmark/bench/: benchmark_arithmetic.hpp  benchmark_builtins.hpp  benchmark_common.hpp  benchmark_containers.hpp  benchmark_conversions.hpp  benchmark_functional.hpp  benchmark_graph.hpp  benchmark_loops.hpp  benchmark_slicing.hpp  benchmark_sorting.hpp  benchmark_string.hpp
cmake/: pythonicConfig.cmake.in
docs/: api_reference.md  arithmetic.md  changelog.md  containers.md  contributing.md  design_notes.md  draw for dev.md  draw.md  errors.md  export for dev .md  functional.md  graph.md  index.md  io.md  iteration.md  math.md  math_overflow_handling.md  old_readme.md  performance.md  print.md  pythonicVars_API.md  strings.md  testing.md  types.md  var.md
docs/Errors/: errors.md
docs/Export/: export.md  export_old_backup.md
docs/File_io/: File_io.md
docs/Functional/: functional.md
docs/Graphics/: index.md
docs/Graphics/Audio/: audio.md
docs/Graphics/Core/: core.md
docs/Graphics/Graphics/: graphics.md  view.md
docs/Graphics/Physics/: physics.md
docs/Graphics/Sprite/: sprite.md
docs/Graphics/Text/: text.md
docs/Graphics/Window/: window.md
docs/Includes_and_namespaces/: incl_name.md
docs/LiveDraw/: livedraw.md  pythonicDraw_tutorial.md
docs/Loops/: iteration.md
docs/Math/: math.md
docs/Media/: draw.md  media.md  media_old_backup.md  pythonicMedia_tutorial.md
docs/Pitfall_safety/: pitfall_safety.md
docs/Plot/: for_dev_plot_old.md  plot.md  plot_old.md
docs/Print/: print.md  print_old.md  print_old_backup.md
docs/Var/: comparison_and_boolean.md  construction_and_lifetime.md  container_and_sequence_operations.md  dtypes.md  global_convenience_functions.md  graph_helpers.md  iterators_mapping_functional.md  numeric_arithmetic.md  string_like_methods.md  type_introspection_and_conversion.md  var.md
docs/examples/: CMakeLists.txt  README.md  cookbook.md  demo.cpp  operators.md  quickstart.md
docs/examples/Graphics/: car_simulation.cpp  flappy_bird.cpp  fps_rpg_shooter.cpp
docs/examples/graph_visualization/: HOW_IT_WORKS.md
docs/tutorial/: pythonicDraw_tutorial.md  pythonicMedia_tutorial.md  pythonicMedia_tutorial_old.md  pythonicPlot_tutorial.md
examples/: CMakeLists.txt  README.md  demo  demo.cpp  fps_rpg_shooter  graph_viewer_example.cpp
examples/graph_visualization/: CMakeLists.txt  README.md  main.cpp
include/pythonic/: Graph.hpp  How to solve jitter issue. my research.  graph_viewer.hpp  pythonic.hpp  pythonicAccel.hpp  pythonicDispatch.hpp  pythonicDispatchDeclarations.hpp  pythonicDispatchForwardDecls.hpp  pythonicDraw-dev.md  pythonicDraw.hpp  pythonicError.hpp  pythonicExport.hpp  pythonicFastPath.hpp  pythonicFile.hpp  pythonicFunction.hpp  pythonicLiveDraw.hpp  pythonicLoop.hpp  pythonicMath.hpp  pythonicMedia.hpp  pythonicOverflow.hpp  pythonicPlot.hpp  pythonicPrint.hpp  pythonicPromotion.hpp  pythonicVars.hpp  readme.md
include/pythonic/REPL/: INTERNALS.md  INTERNALS_v1.md  README.md  ScriptIt.cpp  ScriptIt_v2_pre_split.cpp  Untitled.nsit  calculator_internals.md  install.sh  issue.nsit  json_and_kernel.hpp  notebook.sh  notebook_internals.md  perser.hpp  pythonicCalculator.hpp  script  scriptit  scriptit_builtins.hpp  scriptit_methods.hpp  scriptit_types.hpp  test_interpreter.py
include/pythonic/REPL/build_scriptit/: scriptit
include/pythonic/REPL/examples/: hello.sit
include/pythonic/REPL/notebook/: getting_started.nsit  index.html  notebook_server.py
include/pythonic/REPL/scriptit-vscode/: extension_internals.md  how_to_use.md  install.py  package-lock.json  package.json
include/pythonic/TerminalGraphics/: Config.hpp  TerminalGraphics.hpp
include/pythonic/TerminalGraphics/Audio/: Audio.hpp  Music.hpp  Sound.hpp  SoundBuffer.hpp
include/pythonic/TerminalGraphics/Core/: Clock.hpp  Color.hpp  Core.hpp  Rect.hpp  Time.hpp  Vector2.hpp
include/pythonic/TerminalGraphics/Effects/: Effects.hpp  Particle.hpp
include/pythonic/TerminalGraphics/Event/: Event.hpp  EventQueue.hpp  Events.hpp  Keyboard.hpp  Mouse.hpp
include/pythonic/TerminalGraphics/Graphics/: Canvas.hpp  Drawable.hpp  Graphics.hpp  Layer.hpp  RenderTarget.hpp  Transformable.hpp  View.hpp
include/pythonic/TerminalGraphics/Physics/: Collision.hpp  Physics.hpp
include/pythonic/TerminalGraphics/Shapes/: CircleShape.hpp  (+5 more)
install/include/pythonic/: Graph.hpp  graph_viewer.hpp  pythonic.hpp  pythonicError.hpp  pythonicFastPath.hpp  pythonicFunction.hpp  pythonicLoop.hpp  pythonicMath.hpp  pythonicOverflow.hpp  pythonicPrint.hpp  pythonicVars.hpp
plan/: next.md  notebook_repl_plan.md  plan.md  pythonicVar_deep_todo_plan.md
scripts/: build_lib  count.py  extract_functions.py  gen_dispatch_stubs.py  gen_forward_dec_func.py  gen_grammar.py
src/: graph_viewer.cpp  pythonicDispatchStubs.cpp
(+20 files in other folders)
